<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/result_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_left"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/result_title"
            app:titleTextAppearance="@style/Theme.Komaric.Text.Toolbar" />

        <com.android.awamp.view.main.NotClickableTextInputLayout
            android:id="@+id/result_weight"
            style="@style/Theme.Komaric.TextInput.OutLined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/weight"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_toolbar"
            app:suffixText="@string/weight_suffix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/result_weight_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textAppearance="@style/Theme.Komaric.Text14"
                tools:text="100" />

        </com.android.awamp.view.main.NotClickableTextInputLayout>

        <com.android.awamp.view.main.NotClickableTextInputLayout
            android:id="@+id/result_current_dose"
            style="@style/Theme.Komaric.TextInput.OutLined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/current_dose"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_weight"
            app:suffixText="@string/units">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/result_current_dose_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:textAppearance="@style/Theme.Komaric.Text14"
                tools:text="250" />

        </com.android.awamp.view.main.NotClickableTextInputLayout>

        <TableLayout
            android:id="@+id/result_table"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_current_dose">

            <TableRow
                android:background="@color/primary"
                android:padding="8dp">

                <TextView
                    android:id="@+id/position_title"
                    style="@style/Theme.Komaric.Text12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/position"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/name_title"
                    style="@style/Theme.Komaric.Text12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/side_title"
                    style="@style/Theme.Komaric.Text12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/side"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/dose_title"
                    style="@style/Theme.Komaric.Text12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dose"
                    android:textAlignment="center" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
